--- a/sudokoo/templates/base.html
+++ b/sudokoo/templates/base.html
@@ -14,6 +14,7 @@
             gtag('config', 'G-T6782FZYPB');
         </script>
         <link href="{% static 'css/base_styles.css' %}" rel="stylesheet">
+        <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.ico' %}"/>
         <meta charset="utf-8">
         <meta name="description" content="A solve experience for Sudoku enthusiasts. Create and solve your own puzzles!">
         <meta name="google-adsense-account" content="ca-pub-1439214829781391">
