--- a/home/static/css/base_styles.css
+++ b/home/static/css/base_styles.css
@@ -15,9 +15,10 @@ a.button {
     border: 2px solid #61C9FF;
     border-radius: 5px;
     padding: 10px 34px 15px 34px;
+    background-color: #050A1C;
 }
 
-a.button.secondary {
+a.button.secondary, a:visited {
     color: white;
 }
 
