sizing issue, home update

--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -12,12 +12,12 @@
 <section class="news">
     <h3 class="recent-features">Recently added features:</h3>
         <ul>
+            <li>Puzzle timer with pause and restart functions (added 6.6.2025)</li>
             <li>Auto-generate puzzles of different difficultites (added 5.31.2025)</li>
         </ul>
     <h3>Upcoming features:</h3>
     <ul>
         <li>Auto-import puzzles from various free sources</li>
-        <li>Puzzle timer with pause and restart functions</li>
         <li>Color palette selection tool (right now you must type a number 1-9 to apply a color)</li>
         <li>Auto-import puzzles from file upload or images (maybe?)</li>
         <li>Personal accounts to save puzzles and track your solve stats</li>
