--- a/play/templates/play.html
+++ b/play/templates/play.html
@@ -355,6 +355,9 @@ document.addEventListener('DOMContentLoaded', function() {
     }
 
     function formattedDuration(duration) {
+        if(!isNaN(duration)) {
+            duration = 0;
+        }
         const hours = Math.floor(duration / 3600);
         const minutes = Math.floor((duration % 3600) / 60);
         const seconds = duration % 60;
