--- a/play/templates/play.html
+++ b/play/templates/play.html
@@ -355,7 +355,7 @@ document.addEventListener('DOMContentLoaded', function() {
     }
 
     function formattedDuration(duration) {
-        if(!isNaN(duration)) {
+        if(isNaN(duration)) {
             duration = 0;
         }
         const hours = Math.floor(duration / 3600);
